2006-11-25  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (add-group): check the arg types

	* user.lisp (*group-map*): add bindings to move and kill groups
	(parse-and-run-command): new option :group
	(group-forward): call next-group
	("gmove"): new command
	("gkill"): likewise

	* primitives.lisp (run-hook-with-args): ignore errors
	(run-hook): likewise

	* core.lisp (move-window-to-group): new function
	(next-group): likewise
	(merge-groups): likewise
	(kill-group): likewise
	(window-in-current-group-p): likewise
	(raise-window): call window-in-current-group-p
	(unhide-window): only actually unhide the window when the window is in the current group
	(hide-window): likewise, but hide
	(remove-window): bug fix involving windows in non-current groups
	(no-focus): only actually focus nothing if the group is current
	(focus-window): call screen-set-focus
	(screen-set-focus): new function

2006-11-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("gnext"): sort the windows
	("gprev"): likewise

	* core.lisp (send-fake-key): use window-xwin
	(switch-to-group): only hide/unhide windows tagged as visible

	* primitives.lisp (*top-level-error-action*): default value is :abort

	* stumpwm.lisp (stumpwm-internal-loop): handle the :abort value of *top-level-error-action*

	* mode-line.lisp (toggle-mode-line): update each group's frame list
	(redraw-mode-line-for): set *current-mode-line-formatters* to the current group

	* user.lisp (*root-map*): add lastmsg and group related bindings
	(define-stumpwm-command): remove screen argument. all callers updated.
	(parse-and-run-command): set *last-command*
	(*groups-map*): new global
	(group-forward): new function
	("gnew"): new command
	("gnewbg"): likewise
	("gnext"): likewise
	("gprev"): likewise
	(echo-groups): new function
	("groups"): new command
	("vgroups"): likewise
	(select-group): new function
	("gselect"): new command

	* primitives.lisp (group): new struct
	(tile-group): likewise