@@ -1,3 +1,7 @@
+2006-11-26  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* core.lisp (no-focus): pass the last focused window in as an argument. callers updated.
+
 2006-11-25  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* core.lisp (add-group): check the arg types
